# hetu-odbc-driver

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  THIRD_PARTY_OPEN_SOURCE_SOFTWARE_NOTICE  ma_connection.c  ma_debug.c  ma_dsn.c  ma_dsn.h  ma_helper.c  ma_info.c  ma_info.h  ma_odbc_version.h.in  ma_parse.c  ma_parse.h  ma_save_query_result.c  ma_statement.c  ma_statement.h  ma_string.c  maodbcu.rc.in  odbc_gateway.bat  odbc_gateway.sh
cmake/: odbc_gateway.cmake
docs/: developerguide_en.md  developerguide_zh.md  userguide_en.md  userguide_zh.md
dsn/: odbc_dsn.c  odbc_dsn.rc  resource.h
test/: CMakeLists.txt  RUNTEST.py  attribute.c  blockcursor.c  catalog.c  catalog1.c  changecatalog.c  complexdatatypes.c  conformancelevel.c  connstr.c  datahandle.c  datatypes.c  sqlgrammar.c  sqlstatements.c  tap.h  trans.c  unicode.c
tools/: install.bat  uninstall.bat
wininstall/: CMakeLists.txt  binaries_dir.xml.in  mariadb_odbc.xml.in
